[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdemmer-easy-thumbnails"
dynamic = ["version", "readme"]
description = "Fork of Easy thumbnails for Django"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Chris Beaven", email = "smileychris@gmail.com"},
    {name = "Florian Demmer", email = "fdemmer@gmail.com"},
]
dependencies = [
    "django>=4.2",
    "pillow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
svg = [
    "svglib",
    "reportlab",
]

[project.urls]
Homepage = "https://github.com/SmileyChris/easy-thumbnails"

[tool.setuptools.dynamic]
version = {attr = "easy_thumbnails.__version__"}
readme = {file = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]

[tool.ruff]
# https://docs.astral.sh/ruff/formatter/
line-length = 90

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "F", "E", "W", "C4", "C90", "B", "I", "INT", "PD", "UP",
    "D201", "D202", "D206", "D207", "D208", "D209", "D211", "D213",
    "D300", "D403", "D419",
]
ignore = [
    "E265", "E731",
    "F403", "F405", "F722", "F821",
    "C408",
]
fixable = ["I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.mccabe]
max-complexity = 12
